--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
     "core-js": "^3.0.1",
-    "d3": "^5.9.2"
+    "d3": "^5.9.2",
+    "moment": "^2.24.0"
   }
 }
