--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/polyfill": "^7.4.0",
     "core-js": "^3.0.1",
     "d3": "^5.9.2",
+    "d3-tip": "^0.9.1",
     "moment": "^2.24.0"
   }
 }
